--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <h1 id="title">Twitch Streamer Status</h1>
   <div id="streamer_boxes"></div>
-  <p>by <a href="http://codepen.io/InstantMizu/" id="profileLink" class="link">Ted</a></p>
+  <p>by <a href="https://github.com/shintouki" id="profileLink" class="link">Ted</a></p>
 </body>
 
 </html>
