--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1 id="title">Twitch Streamer Status</h1>
     <div id="streamer_boxes"></div>
-    <p>by <a href="https://github.com/shintouki" id="profileLink" class="link">Ted</a></p>
+    <p>by <a href="https://github.com/tshin1" id="profileLink" class="link">Ted</a></p>
     <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
     <script src="js/index.js"></script>
   </body>
